k8s/dev/imagor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imagor-dev
  namespace: student-it200233
  labels:
    app: imagor-dev
spec:
  type: ClusterIP
  selector:
    app: imagor-dev
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
