k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dicekeeper-dev
  namespace: student-it200233
  labels:
    app: dicekeeper-dev
spec:
  type: ClusterIP
  selector:
    app: dicekeeper-dev
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
