k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dicekeeper-dev-edge-app
  namespace: student-it200233
  labels:
    app: dicekeeper-dev
    app.kubernetes.io/component: public-edge
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-set-headers: student-it200233/dicekeeper-edge-development-headers
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/upstream-vhost: dev.dicekeeper.net
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: it200233.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /_dicekeeper/dev/app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dicekeeper-dev
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dicekeeper-dev-edge-imagor
  namespace: student-it200233
  labels:
    app: imagor-dev
    app.kubernetes.io/component: public-edge
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-set-headers: student-it200233/dicekeeper-edge-development-headers
    nginx.ingress.kubernetes.io/rewrite-target: /imagor/$2
    nginx.ingress.kubernetes.io/upstream-vhost: dev.dicekeeper.net
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: it200233.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /_dicekeeper/dev/imagor(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: imagor-dev
                port:
                  number: 8000
